fixed align bug

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 
@@ -30,7 +31,7 @@ h1 {
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 100vh !important;
   position: relative;
   background-color: rgba(0,0,0,0.4);
   color: #fff;
@@ -41,7 +42,7 @@ h1 {
   background: url('./assets/sunset.jpg') no-repeat center center/cover;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh !important;
   top: 0;
   left: 0;
   z-index: -1;
@@ -67,7 +68,7 @@ h1 {
 
 .container {
   max-width: 700px;
-  height: 700px;
+  height: 550px;
   margin: auto;
   padding: 0 1rem;
   position: relative;
